--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -118,6 +118,7 @@
 .footer-right-newsletter hr{
     margin-bottom: 10px;
     border:1px solid white;
+    margin-left: 0px;
     
 }
 
@@ -127,6 +128,7 @@
    background-color: black;
    color: white;
    border: 0;
+   cursor: pointer;
 }
 
 .footer-copyright{
@@ -151,7 +153,7 @@
     max-height: 100%;
     margin-top: 20px;
 }
-    .footer-container{
+.footer-container{
     flex-direction: column;
     padding: 10px;
 }
@@ -210,6 +212,7 @@
     margin-bottom: 20px;
 }
 
+
 .footer-right-newsletter form input[type=email]{
     background: transparent;
     border: 1px solid black;
@@ -223,7 +226,9 @@
 .footer-right-newsletter hr{
     margin-bottom: 10px;
     border:1px solid white;
-    max-width:calc(52%);
+    margin-left: 0px;
+    max-width: 70%;
+    display: none;
     
 }
 
