--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -69,8 +69,9 @@
   display: none;
   max-width: fit-content;
   padding: 30px;
-  position: absolute;
-  z-index: 1;
+  position: fixed;
+  right: calc(40% - 120px);
+  z-index: -1;
   border-radius: 5px;
 }
 
