--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,94 +1,85 @@
 .cart-container{
     width: 100%;
 }
-.cart-container hr{
-    margin: 20px 10px;
-}
 .cart-back-btn{
-    width: 100%;
+    max-width: 100%;
 }
 .cart-back-btn button{
-    max-width: 100%;
-    margin-left: 20px;
-    margin-bottom: 5px;
-    padding: 5px 30px;
-    background-color: transparent;
-    outline: 0;
-    border: 2px solid burlywood;
-    border-radius: 5px;
-}
-.cart-back-btn button:hover{
- cursor: pointer;
-}
-
-.cart-header{
-   justify-self: center;
-}
-
-.cart-sub-header{
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 20px;
-}
-.cart-sub-header .sub-header-header{
-    display: flex;
-    gap: 5rem;
-}
-
-.cart-data-container{
-    max-width: 100%;
-    margin: 20px;
-}
-.cart-data{
-    width: 100%;
-}
-.cart-col{
-    display: flex;
-    justify-content: space-between;
-}
-.cart-col img{
-    max-width:50px;
-}
-.cart-col img:hover{
-    cursor: pointer;
-}
-
-.cart-col .cart-col-1{
-    margin: 10px;
-}
-
-.cart-col .cart-col-1 button{
-    background-color: #6F4E37;
-    padding: 5px 30px;
+    padding: 5px 20px;
+    margin-left: 10px;
+    background-color: burlywood;
+    color: white;
     outline: 0;
     border: 0;
-    color: white;
     border-radius: 5px;
 }
 
-.cart-col .cart-col-1 button:hover{
+.cart-back-btn button:hover{
     cursor: pointer;
-    padding: 5px 25px;
+}
+.cart-header{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.cart-container hr{
+    margin: 20px 10px;
+    border:0.5px solid #6F4E37;
 }
 
-.cart-col-1 small{
-    color: grey;
+.cart-top{
+    padding:0px 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.cart-col-1 p{
-    font-weight: bold;
+.cart-top-right{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
 }
-.cart-subtotal{
-    justify-self: center;
+
+
+
+.cart-center{
+    display: flex;
+    justify-content: space-between;
+    padding:0px 20px;
+}
+.cart-center img{
+    max-width: 70px;
+}
+.cart-center-left{
+  display: flex;
+
+}
+
+.cart-center-right{
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+}
+
+.cart-center-right-right{
     align-self: center;
 }
-.cart-buttons{
+
+.cart-center-right-left{
     align-self: center;
 }
 
-.cart-buttons p{
-    margin: 10px 0px;
-    font-weight: bold;
+.cart-center-left-right {
+    max-width: 100%;
+}
+.cart-center-left-right button{
+    padding: 5px 20px;
+    background-color: #6F4E37;
+    color: white;
+    outline: 0;
+    border: 0;
+    border-radius: 5px;
+}
+.cart-center-left-right button:hover{
+    cursor: pointer;
 }
 .cart-footer{
     display: flex;
@@ -124,82 +115,61 @@
     cursor: pointer;
 }
 
-@media (max-width:641px) and (min-width:100px) {
-
+@media (max-width:451px) and (min-width:50px) {
+.cart-back-btn button{
+    margin-left: 20px;
+}
 .cart-container hr{
-    margin: 10px 10px;
+    margin: 5px 5px;
+}
+.cart-top{
+    padding:0px 10px;
 }
 
-
-.cart-header{
-   justify-self: left;
-   margin-left: 20px;
-}
-
-.cart-sub-header{
+.cart-top-right{
     display: flex;
-    justify-content: space-between;
-    padding: 0px 10px;
-    font-size: 10px;
-}
-.cart-sub-header .sub-header-header{
-    display: flex;
+    justify-content: space-evenly;
     gap: 1rem;
 }
 
-.cart-data-container{
-    max-width: 100%;
-    margin: 20px;
-}
-.cart-data{
-    width: 100%;
-}
-.cart-col{
+.cart-center{
     display: flex;
     justify-content: space-between;
+    padding:0px 10px;
 }
-.cart-col img{
-    max-width:20%;
-    max-height: 10vh;
-    justify-self: center;
-    align-self: center;
+.cart-center img{
+    max-width: 50px;
+}
+.cart-center-left{
+  flex-direction: column;
 }
 
-.cart-col .cart-col-1{
+.cart-center-right{
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.cart-center-left-right button{
+    padding: 5px 10px;
+}
+.cart-footer{
+    flex-direction: row-reverse;
     margin: 10px;
-    font-size: 12px;
-    max-width: 100px;
-    text-overflow: ellipsis;
+}
+.cart-footer .cart-left{
+    margin-left: 20px;
 }
 
-.cart-col .cart-col-1 button{
+.cart-left button{
+    padding: 8px 40px;
     background-color: #6F4E37;
-    padding: 5px 30px;
-    outline: 0;
-    border: 0;
-    color: white;
-    border-radius: 5px;
+    font-size: 15px;
 }
 
-.cart-col .cart-col-1 button:hover{
-    cursor: pointer;
-    padding: 5px 25px;
+.cart-right button{
+    width: 100%;
+    padding: 10px 25px;
 }
 
-.cart-col-1 small{
-    color: grey;
-}
-
-.cart-col-1 p{
-    font-weight: bold;
-}
-.cart-subtotal{
-    justify-self: center;
-    align-self: center;
-}
-.cart-buttons{
-    align-self: center;
-}
-
-    
 }
