--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,23 @@
   font-weight: 400;
   font-optical-sizing: auto;
 }
+
+/*
+Brass	#E1C16E
+Camel	#C19A6B
+Chocolate	#7B3F00
+Coffee	#6F4E37
+Cinnamon	#D27D2D
+Copper	#B87333
+
+..green
+Lime Green	#32CD32
+Neon Green	#0FFF50
+
+..blue
+Egyptian Blue	#1434A4
+Neon Blue	#1F51FF
+Ultramarine	#0437F2
+Kelly Green	#4CBB17
+
+*/
