--- a/admin/src/components/Header/Header.css
+++ b/admin/src/components/Header/Header.css
@@ -1,12 +1,16 @@
 .header-container{
     display: flex;
     justify-content: space-between;
-    margin: 10px 10px;
+    background-color: #C19A6B;
+    width: 100%;
+    height: 100%;
 }
 
 .header-left{
     flex: 1;
     max-width: 100%;
+    margin-left: 20px;
+    margin-top: 10px;
 }
 .header-left img{
     max-width: 40%;
@@ -18,12 +22,17 @@
 
 .header-right{
     max-width: 100%;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .header-right .header-top{
     color: white;
     font-size: 20px;
     font-weight: 700;
+    justify-self: center;
+    margin-bottom: 5px;
 }
 
 .header-right .header-top{
@@ -47,3 +56,13 @@
 .header-right .header-bottom .header-btn button:hover{
     cursor: pointer;
 }
+
+/*
+/*
+Brass	#E1C16E
+Camel	#C19A6B
+Chocolate	#7B3F00
+Coffee	#6F4E37
+Cinnamon	#D27D2D
+Copper	#B87333
+*/
