--- a/admin/src/pages/Home/HomePage.css
+++ b/admin/src/pages/Home/HomePage.css
@@ -2,9 +2,9 @@
     display: flex;
     gap: 2rem;
     border: 0;
+    background-color:#C19A6B;
     border-top:2px solid black;
     border-bottom: 1px solid black;
-    margin-top: 10px;
     overflow-x: auto;
     height: 100vh;
     
@@ -26,14 +26,17 @@
     border: 0;
     border-right:2px solid black;
     
+    
 }
 .home-action-btns .action-btn-1{
     margin-top: 10px;
+    
 }
 
 .action-btn{
     margin-top: 10px;
     margin-left: 10px;
+    
 }
 
 .action-btn-10{
@@ -49,6 +52,7 @@
     border-bottom-left-radius: 5px;
     font-weight: bold;
     width: 100%;
+    background-color: #000000;
 }
 
 .action-btn button:hover{
@@ -250,6 +254,15 @@ form .form-btn{
     cursor: pointer;
 }
 
+/*
+/*
+Brass	#E1C16E
+Camel	#C19A6B
+Chocolate	#7B3F00
+Coffee	#6F4E37
+Cinnamon	#D27D2D
+Copper	#B87333
+*/
 
 
 
