--- a/frontend/src/components/Blog/Blog.css
+++ b/frontend/src/components/Blog/Blog.css
@@ -11,8 +11,16 @@
     max-height: 200px;
 }
 
-.blog-content h2{
+.blog-content h3{
     text-align: center;
+    font-weight: bolder;
+    font-size: 15px;
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    display: -webkit-box;
+
 }
 
 .blog-container .blog-content .blog-text{
@@ -28,27 +36,9 @@
     margin-bottom: 20px;
     margin-right: 10px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 15px;
     border: 0.5px solid burlywood;
 }
-
-.blog-container .blog-button{
-    justify-self: center;
-}
-.blog-container button{
-    padding: 10px;
-    margin-top: 10px;
-    cursor: pointer;
-    background-color: transparent;
-    border: 2px solid burlywood;
-    border-radius: 2px;
-
-}
-
-.blog-container button:hover{
-    font-weight: 900;
-}
-
 
 
 @media (max-width: 854px) and (min-width: 100px) {
@@ -59,17 +49,22 @@
     justify-self: left;
 }
 .blog-container .blog-content img{
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
 }
 
-.blog-content h2{
+.blog-content h3{
     text-align: left;
-    font-size: clamp(1rem, 2vw + 0.5rem, 2rem);
+    font-weight: bolder;
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    display: -webkit-box;
+    font-size: clamp(0.5rem, 1vw + 0.5rem, 3rem);
 }
 
 .blog-container .blog-content .blog-text{
-    max-width: 150px;
+    max-width: 200px;
     text-align: left;
     overflow: hidden;
     display: -webkit-box;
@@ -82,23 +77,10 @@
     margin-right: 10px;
     border-radius: 10px;
     padding: 5px;
-    max-width: fit-content;
+    max-width: max-content;
+    max-height: fit-content;
 }
 
-.blog-container .blog-button{
-    justify-self: left;
-}
-.blog-container button{
-    padding: 2px;
-    font-size: 12px;
-    margin-top: 5px;
-    cursor: pointer;
-
-}
-
-.blog-container button:hover{
-    font-weight: 900;
-}
 }
 
 a{
