--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -3,34 +3,33 @@
 .hero-container{
     justify-self: left;
     margin-left: 20px;
-    overflow: hidden;
 }
 .hero-container .hero-slider{
     display: flex;
     justify-content: space-evenly;
-    gap: 4rem;
-    overflow: hidden;
+    gap: 2rem;
 }
 .hero-container .hero-slider .hero-text{
     justify-self: center;
     align-self: center;
+    max-width: 100%;
 }
 .hero-container .hero-slider .hero-text h1 {
     font-family: "Sansita Swashed", system-ui;
     font-optical-sizing: auto;
-    font-size: 100px;
+    font-size: clamp(1rem, 5vw + 5rem, 5rem);
 }
 
 .hero-container .hero-slider .hero-text h2 {
     font-family: "Sansita Swashed", system-ui;
     font-optical-sizing: auto;
-    font-size: 90px;
+    font-size: clamp(1rem, 5vw + 5rem, 5rem);
 }
 
 .hero-container .hero-slider .hero-text p {
     font-family: "Sansita Swashed", system-ui;
     font-optical-sizing: auto;
-    font-size: 100px;
+    font-size: clamp(1rem, 5vw + 5rem, 5rem);
 }
 
 .hero-container .hero-slider .hero-text p{
@@ -39,30 +38,11 @@
 
 .hero-container .hero-slider .hero-slider-images img{
     border-radius: 20px;
-    max-width: 700px;
+    width: 900px;
     animation: FadeAway 3s ease;
 }
 .hero-text{
     font-family: "Syne Mono", monospace; 
-}
-
-.hero-buttons{
-    display:none;
-}
-
-.hero-container .hero-slider .hero-buttons .hero-back  img{
-    width: 50px;
-    position:relative;
-    top:-250px;
-
-}
-
-.hero-container .hero-slider .hero-buttons .hero-next img{
-    width: 50px;
-    position: relative;
-    left:700px;
-    top: -250px;
-    
 }
 
 .hero-text-btn button{
@@ -112,14 +92,143 @@
     }
 }
 
+@media (max-width:2565px) and (min-width:2000px) {
+.hero-container{
+    justify-self: left;
+    margin-left: 20px;
+}
+.hero-container .hero-slider{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+.hero-container .hero-slider .hero-text{
+    position: relative;
+    color: white;
+    right: calc(25% - 100px);
+    bottom: 800px;
+}
+.hero-container .hero-slider .hero-text h1 {
+    font-family: "Sansita Swashed", system-ui;
+    font-optical-sizing: auto;
+    font-size: clamp(5rem, 5vw + 8rem, 10rem);
+}
+
+.hero-container .hero-slider .hero-text h2 {
+    font-family: "Sansita Swashed", system-ui;
+    font-optical-sizing: auto;
+    font-size: clamp(5rem, 5vw + 8rem, 10rem);
+}
+
+.hero-container .hero-slider .hero-text p {
+    font-family: "Sansita Swashed", system-ui;
+    font-optical-sizing: auto;
+    font-size: clamp(5rem, 5vw + 8rem, 10rem);
+}
+
+.hero-container .hero-slider .hero-text p{
+    animation: FadeAwayText 1s ease;
+}
+
+.hero-container .hero-slider .hero-slider-images img{
+    border-radius: 20px;
+    width: 100%;
+    animation: FadeAway 3s ease;
+}
+.hero-text{
+    font-family: "Syne Mono", monospace; 
+}
+
+.hero-text-btn button{
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px 30px;
+    border-radius: 10px;
+    border: 1px solid white;
+    background: burlywood;
+}
+.hero-text-btn button:hover{
+    cursor: pointer;
+    background-color: #6F4E37;
+    color: white;
+    border: 1px solid white;
+    transition: 0.5s ease;
+}
+
+}
 /*Mobile Devices
 /* font-size: clamp([minimum size], [preferred fluid size], [maximum size]); */
+@media (max-width:1350px) and (min-width:1144px) {
+.hero-container{
+    justify-self: left;
+    margin-left: 20px;
+}
+.hero-container .hero-slider{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+.hero-container .hero-slider .hero-text{
+    justify-self: center;
+    align-self: center;
+    max-width: 100%;
+}
+.hero-container .hero-slider .hero-text h1 {
+    font-family: "Sansita Swashed", system-ui;
+    font-optical-sizing: auto;
+    font-size: clamp(1rem, 2vw + 3rem, 4rem);
+}
 
-@media (max-width:940px) and (min-width:100px) {
+.hero-container .hero-slider .hero-text h2 {
+    font-family: "Sansita Swashed", system-ui;
+    font-optical-sizing: auto;
+    font-size: clamp(1rem, 2vw + 3rem, 4rem);
+}
+
+.hero-container .hero-slider .hero-text p {
+    font-family: "Sansita Swashed", system-ui;
+    font-optical-sizing: auto;
+    font-size: clamp(1rem, 2vw + 3rem, 4rem);
+}
+
+.hero-container .hero-slider .hero-text p{
+    animation: FadeAwayText 1s ease;
+}
+
+.hero-container .hero-slider .hero-slider-images img{
+    border-radius: 20px;
+    width: 700px;
+    animation: FadeAway 3s ease;
+}
+.hero-text{
+    font-family: "Syne Mono", monospace; 
+}
+
+.hero-text-btn button{
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px 30px;
+    border-radius: 10px;
+    border: 1px solid white;
+    background: burlywood;
+}
+.hero-text-btn button:hover{
+    cursor: pointer;
+    background-color: #6F4E37;
+    color: white;
+    border: 1px solid white;
+    transition: 0.5s ease;
+} 
+}
+
+
+@media (max-width:1143px) and (min-width:453px) {
 .hero-container{
     justify-self: center;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 0px;
 }
 .hero-container .hero-slider{
     display: flex;
@@ -148,7 +257,7 @@
 
 .hero-container .hero-slider .hero-slider-images img{
     border-radius: 20px;
-    max-width: 100%;
+    width: 100%;
 }
 
 
@@ -160,39 +269,45 @@
 }
 
 /*Mobile Devices 2*/
-@media (max-width:1304px) and (min-width:941px) {
 
+@media (max-width:452px) and (min-width:100px) {
 .hero-container{
-    justify-self: left;
-    margin-left: 20px;
+    margin-bottom: 0px;
 }
 .hero-container .hero-slider{
-    gap: 0.6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 1rem;
 }
-
+.hero-container .hero-slider .hero-text{
+    position: relative;
+    color: white;
+    right: calc(38% - 100px);
+    bottom: 230px;
+}
 .hero-container .hero-slider .hero-text h1 {
-    font-size: 50px;
+    font-size: clamp(2rem, 8vw + 1rem, 2rem);
 }
 
 .hero-container .hero-slider .hero-text h2 {
-    font-size: 50px;
+     font-size: clamp(2rem, 5vw + 1rem, 3rem);
 }
 
 .hero-container .hero-slider .hero-text p {
-    font-size: 40px;
+     font-size: clamp(2rem, 10vw + 1rem, 3rem);
 }
 
 
 .hero-container .hero-slider .hero-slider-images img{
     border-radius: 20px;
-    max-width: 700px;
+    width: 100%;
 }
+
 
 .hero-text-btn button{
     width: 100%;
-    margin-top: 20px;
-    padding: 10px 30px;
-    border-radius: 10px;
+    margin-top: 10px;
 }
-
+   
 }
