--- a/frontend/src/pages/contacts/Contacts.css
+++ b/frontend/src/pages/contacts/Contacts.css
@@ -1,5 +1,5 @@
 .contact-container{
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -24,7 +24,7 @@ form input{
 }
 
 form textarea{
-    width: 100%;
+    width: 90%;
     padding: 20px;
     margin-bottom: 20px;
     outline: 0;
@@ -38,6 +38,7 @@ form textarea{
 }
 .contacts-header h1{
     font-size: 30px;
+    text-align: center;
 }
 .contact-form-btn{
     display: flex;
@@ -47,9 +48,8 @@ form textarea{
 
 .contact-form-btn button{
  background-color: #6F4E37;
- width: 100%;
+ width: 90%;
  padding: 20px;
- width:100%;
  border-radius: 5px;
  outline: 0;
  border: 1px solid white;
